--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -16,32 +16,36 @@ $brand-colors: (
   "greenblue": #389092,
 );
 
+// Site-configured values from _config.yml
 $theme-name: "{{ site.theme_color }}";
 $brand-name: "{{ site.brand_color }}";
 $theme-color: map-get($theme-colors, "snowwhite");
 $brand-color: map-get($brand-colors, "orangered");
 
+// Theme color selection
 @if map-has-key($theme-colors, $theme-name) {
   $theme-color: map-get($theme-colors, $theme-name);
-} @else if str-index($theme-name, "#") == 1 {
-  $theme-color: {{ site.theme_color | default: '#ffffff' }};
+} @else if str-index("#{$theme-name}", "#") == 1 {
+  $theme-color: unquote("{{ site.theme_color | default: '#ffffff' }}");
 }
 
+// Brand color selection
 @if map-has-key($brand-colors, $brand-name) {
   $brand-color: map-get($brand-colors, $brand-name);
-} @else if str-index($brand-name, "#") == 1 {
-  $brand-color: {{ site.brand_color | default: '#ff5100' }};
+} @else if str-index("#{$brand-name}", "#") == 1 {
+  $brand-color: unquote("{{ site.brand_color | default: '#ff5100' }}");
 }
 
-$content-width: {{ site.content_width | default: '920px' }};
+// Layout width
+$content-width: unquote("{{ site.content_width | default: '920px' }}");
 
-// Click to top theme
-$click-to-top-light-background-color: {{ site.click_to_top.light.background_color | default: "white" }};
-$click-to-top-light-color: {{ site.click_to_top.light.color | default: "#454545" }};
-$click-to-top-dark-background-color: {{ site.click_to_top.dark.background_color | default: "#34323d" }};
-$click-to-top-dark-color: {{ site.click_to_top.dark.color | default: "#bbb" }};
+// Click to top button theme
+$click-to-top-light-background-color: unquote("{{ site.click_to_top.light.background_color | default: 'white' }}");
+$click-to-top-light-color: unquote("{{ site.click_to_top.light.color | default: '#454545' }}");
+$click-to-top-dark-background-color: unquote("{{ site.click_to_top.dark.background_color | default: '#34323d' }}");
+$click-to-top-dark-color: unquote("{{ site.click_to_top.dark.color | default: '#bbb' }}");
 
-// Selection styles
+// Selection style
 $selection-color: unquote("{{ site.selection.color }}");
 $selection-background-color: unquote("{{ site.selection.background_color }}");
 
