--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -14,13 +14,17 @@ $brand-colors: (
   "orangered": #ff5100,
   "greatgold": #f2cb05,
   "greenblue": #389092,
+  "unist_navy": #001C54,
+  "unist_emerald": #43C1C3
 );
+
+
 
 // Site-configured values from _config.yml
 $theme-name: "{{ site.theme_color }}";
 $brand-name: "{{ site.brand_color }}";
 $theme-color: map-get($theme-colors, "snowwhite");
-$brand-color: map-get($brand-colors, "orangered");
+$brand-color: map-get($brand-colors, "unist_navy");
 
 // Theme color selection
 @if map-has-key($theme-colors, $theme-name) {
