--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -5,6 +5,8 @@
   2. Customize default _includes/custom-head.html in your source directory and insert the given code snippet.
 {% endcomment %}
 
+<!-- DIL website-->
+
 <script>
   window.BANNER_SLIDESHOW = {{ site.banner_slideshow | jsonify }};
 </script>
